[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
async-trait = "0.1.83"
derive_more = { version = "1.0.0", features = ["full"] }
json = "0.12.4"
serde = { version= "1.0.215", features = ["derive"]}
surrealdb = "1.5.6"
uuid = "1.11.0"
validator = {version="0.19.0", features=["derive"]}
